// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sanitize Html Mixin Sanitize URL Should not change a valid url 1`] = `
<div>
  <a
    class="safe-anchor"
    href="https://example.com"
  />
   
  <a
    class="unsafe-anchor"
    href="https://example.com"
  />
</div>
`;

exports[`Sanitize Html Mixin Sanitize URL Should not change a valid url without https 1`] = `
<div>
  <a
    class="safe-anchor"
    href="example.com"
  />
   
  <a
    class="unsafe-anchor"
    href="example.com"
  />
</div>
`;

exports[`Sanitize Html Mixin Sanitize URL Should sanitize url with encoded javascript in href 1`] = `
<div>
  <a
    class="safe-anchor"
    href="about:blank"
  />
   
  <a
    class="unsafe-anchor"
    href="JaVaScRiP
t:alert('xss')"
  />
</div>
`;

exports[`Sanitize Html Mixin Sanitize URL Should sanitize url with javascript in href 1`] = `
<div>
  <a
    class="safe-anchor"
    href="about:blank"
  />
   
  <a
    class="unsafe-anchor"
    href="javascript:alert('xss')"
  />
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should escape object tag with data64 XSS 1`] = `
<div>
  <div
    class="safe"
  />
   
  <div
    class="unsafe"
  >
    <object
      data="data:text/html;base64,PHNjcmlwdD5hbGVydCgiWFNTIik7PC9zY3JpcHQ+Cg=="
    />
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should escape script tag with inner js XSS 1`] = `
<div>
  <div
    class="safe"
  />
   
  <div
    class="unsafe"
  >
    <script>
      alert('xss')
    </script>
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should escape script tag with onclick XSS 1`] = `
<div>
  <div
    class="safe"
  />
   
  <div
    class="unsafe"
  >
    <script
      onclick="alert('xss')"
    />
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should not sanitize custom configured tags 1`] = `
<div>
  <div
    class="safe"
  >
    <ul>
      <li>
        <input
          checked=""
          disabled=""
          type="checkbox"
        />
         foo
        <ul>
          <li>
            <input
              disabled=""
              type="checkbox"
            />
             bar
          </li>
          <li>
            <input
              checked=""
              disabled=""
              type="checkbox"
            />
             baz
          </li>
        </ul>
      </li>
      <li>
        <input
          disabled=""
          type="checkbox"
        />
         bim
      </li>
    </ul>
  </div>
   
  <div
    class="unsafe"
  >
    <ul>
      <li>
        <input
          checked=""
          disabled=""
          type="checkbox"
        />
         foo
        <ul>
          <li>
            <input
              disabled=""
              type="checkbox"
            />
             bar
          </li>
          <li>
            <input
              checked=""
              disabled=""
              type="checkbox"
            />
             baz
          </li>
        </ul>
      </li>
      <li>
        <input
          disabled=""
          type="checkbox"
        />
         bim
      </li>
    </ul>
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should sanitize & keep href attribute in anchor tag 1`] = `
<div>
  <div
    class="safe"
  >
    <a
      href="http://google.com"
    />
  </div>
   
  <div
    class="unsafe"
  >
    <a
      href="http://google.com"
      onerror="alert('xss');"
    />
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should sanitize & render img with base64 src 1`] = `
<div>
  <div
    class="safe"
  >
    <img
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADcAAAA3CAAAAACNsI2aAAAACXBIWXMAAAB5AAAAeQBPsriEAAAB6ElEQVR42rVWO46EMAzNadAcY3vaOQMXoXcXKZehS8NpqNxamw8JxDYra1Zjhgge9jhx/By7bYvtl4Y8Qn+tEjty6WxuQ0KkfOM5wJEeEkT1bsigU+xGQV+QfZ2ned0LAkLnyQ4XV2XB/k+jXdTs8Mc1+UlvQehEt5Fit7hLFsUfqfOk3d1lJ9VO+qN1sFvJm+IScB7s3uo8ZVzC8RrsXjIuqp2n0d+sxFNbHxCw9cF34yn2L5jyJWndIprzRfqLpvw0+6PCh1fjgxpP5NL4VzlYEa6zOYDgzyvk0cMbykMek6THipSXAD5/BKh8H/3JGZTxPgM9Px9WDL0CkM1ORJie48nsWAXQ8kW1YxlknKfIWJs/EBXgoZ6Jf2KMNMYz4FgBJjTGkxR/H67vm/H8eP9ShlyRqfli24c0svy0zLNXgOkNtQJEle/P/MPOv8T3TGZIZIbO7sL7BMON74nkuQqUj4XvnMvwiNCBjO+yev2NVDtZLeX5rvD9lu0zauxW+a6dBvJ8H5Gyfzz3wIBkO57rYECyHeeWF+xW+YcT47Jkdzi4TpT+lPNdIv9Z34fxNOxf0PhO91yw5MuMen56AxLPOtG7W9T63SCQ2k9Uol1so3bVnrog2JTyU57n1bb37n3s5s8Of5RfsaTdSlfuyUAAAAA8dEVYdGNvbW1lbnQAIEltYWdlIGdlbmVyYXRlZCBieSBHTlUgR2hvc3RzY3JpcHQgKGRldmljZT1wbm1yYXcpCvqLFvMAAABKdEVYdHNpZ25hdHVyZQA4NWUxYWU0YTJmYmE3OGVlZDRmZDhmMGFjZjIzNzYwOWU4NGY1NDk2Y2RlMjBiNWQ3NmM5Y2JjMjk4YzRhZWJjJecJ2gAAAABJRU5ErkJggg=="
    />
  </div>
   
  <div
    class="unsafe"
  >
    <img
      onerror="alert('xss');"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADcAAAA3CAAAAACNsI2aAAAACXBIWXMAAAB5AAAAeQBPsriEAAAB6ElEQVR42rVWO46EMAzNadAcY3vaOQMXoXcXKZehS8NpqNxamw8JxDYra1Zjhgge9jhx/By7bYvtl4Y8Qn+tEjty6WxuQ0KkfOM5wJEeEkT1bsigU+xGQV+QfZ2ned0LAkLnyQ4XV2XB/k+jXdTs8Mc1+UlvQehEt5Fit7hLFsUfqfOk3d1lJ9VO+qN1sFvJm+IScB7s3uo8ZVzC8RrsXjIuqp2n0d+sxFNbHxCw9cF34yn2L5jyJWndIprzRfqLpvw0+6PCh1fjgxpP5NL4VzlYEa6zOYDgzyvk0cMbykMek6THipSXAD5/BKh8H/3JGZTxPgM9Px9WDL0CkM1ORJie48nsWAXQ8kW1YxlknKfIWJs/EBXgoZ6Jf2KMNMYz4FgBJjTGkxR/H67vm/H8eP9ShlyRqfli24c0svy0zLNXgOkNtQJEle/P/MPOv8T3TGZIZIbO7sL7BMON74nkuQqUj4XvnMvwiNCBjO+yev2NVDtZLeX5rvD9lu0zauxW+a6dBvJ8H5Gyfzz3wIBkO57rYECyHeeWF+xW+YcT47Jkdzi4TpT+lPNdIv9Z34fxNOxf0PhO91yw5MuMen56AxLPOtG7W9T63SCQ2k9Uol1so3bVnrog2JTyU57n1bb37n3s5s8Of5RfsaTdSlfuyUAAAAA8dEVYdGNvbW1lbnQAIEltYWdlIGdlbmVyYXRlZCBieSBHTlUgR2hvc3RzY3JpcHQgKGRldmljZT1wbm1yYXcpCvqLFvMAAABKdEVYdHNpZ25hdHVyZQA4NWUxYWU0YTJmYmE3OGVlZDRmZDhmMGFjZjIzNzYwOWU4NGY1NDk2Y2RlMjBiNWQ3NmM5Y2JjMjk4YzRhZWJjJecJ2gAAAABJRU5ErkJggg=="
    />
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should sanitize and keep name, target, rel attributes in anchor tag 1`] = `
<div>
  <div
    class="safe"
  >
    <a
      href="http://google.com"
      name="moshe"
      rel="noreferrer noopener"
      target="_blank"
    />
  </div>
   
  <div
    class="unsafe"
  >
    <a
      href="http://google.com"
      name="moshe"
      onerror="alert('xss');"
      rel="noreferrer noopener"
      target="_blank"
    />
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should sanitize img tag with onerror XSS 1`] = `
<div>
  <div
    class="safe"
  >
    <img
      src="x"
    />
  </div>
   
  <div
    class="unsafe"
  >
    <img
      onerror="alert('xss');"
      src="x"
    />
  </div>
</div>
`;

exports[`Sanitize Html Mixin Special tags test suit Should sanitize javascript scheme from anchor tag 1`] = `
<div>
  <div
    class="safe"
  >
    <a />
  </div>
   
  <div
    class="unsafe"
  >
    <a
      href="javascript:alert('xss');"
    />
  </div>
</div>
`;
